# voiceprint

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml  notation-audit.yml  voiceprint-tests.yml
app/: main.py
app/data/: _l1_phonemes_snapshot.txt  alignment_thresholds.json  confusion_matrix.json  notation_drift_catalogue.md  phoneme_alphabet.json
app/routes/: analyze.py  health.py
app/services/: alignment.py  extractor.py  language_check.py  phonemes.py  quality.py  smoothing.py  vot.py
calibration/: README.md  analyze_results.py  run_calibration.py
calibration/results/: ravdess_st_2026-05-03_report.md
scripts/: notation_audit.py  test_language_match.py
tests/: conftest.py  test_alignment.py  test_analyze_route.py  test_extractor.py  test_health.py  test_language_check.py  test_phonemes.py  test_quality.py  test_smoothing.py  test_stretch_scoring.py  test_vot.py
